kubernetes/apps/base/game-servers/adminer/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'adminer.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: adminer
          port: 8080
          weight: 100
